5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4072/executions/1578_1559.log
== TEST (2019-03-13 11:26:27) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA"
print(frase.uper(ada lovelace foi a primeira programadora da historia))
-- ERROR:
File "XXXX", line 2
    print(frase.uper(ada lovelace foi a primeira programadora da historia))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:27:00) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA"
print(ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.uper(ada lovelace foi a primeira programadora da historia))
-- ERROR:
File "XXXX", line 2
    print(ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.uper(ada lovelace foi a primeira programadora da historia))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:27:33) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA"
print(.uper(ada lovelace foi a primeira programadora da historia))
-- ERROR:
File "XXXX", line 2
    print(.uper(ada lovelace foi a primeira programadora da historia))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:28:34) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA"
print(.uper(ada lovelace foi a primeira programadora da historia))
-- EXECUTION TIME:
0.149671
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print(.uper(ada lovelace foi a primeira programadora da historia))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:29:41) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA"
print(.upper(ada lovelace foi a primeira programadora da historia))
-- ERROR:
File "XXXX", line 2
    print(.upper(ada lovelace foi a primeira programadora da historia))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:30:35) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA"
print(.upper("ada lovelace foi a primeira programadora da historia"))
-- ERROR:
File "XXXX", line 2
    print(.upper("ada lovelace foi a primeira programadora da historia"))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:31:47) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA")
-- EXECUTION TIME:
0.181943
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:32:36) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print(.upper("Ada Lovelace foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:33:30) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.").upper("Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia.").upper("Ada Lovelace foi a primeira programadora da historia.")
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:33:57) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia.".upper("Ada Lovelace foi a primeira programadora da historia."))
TypeError: upper() takes no arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:34:23) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper("Ada Lovelace foi a primeira programadora da historia."))
-- EXECUTION TIME:
0.19082
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia.".upper("Ada Lovelace foi a primeira programadora da historia."))
TypeError: upper() takes no arguments (1 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 11:34:27) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia.".upper("Ada Lovelace foi a primeira programadora da historia."))
TypeError: upper() takes no arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:22:32) 
-- CODE:
frase = Ada Lovelace foi a primeira programadoranda historia.
print(Ada Lovelace foi a primeira programadoranda historia.upper(Ada Lovelace foi a primeira programadoranda historia.))
-- ERROR:
File "XXXX", line 1
    frase = Ada Lovelace foi a primeira programadoranda historia.
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:23:07) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadoranda historia."
print(Ada Lovelace foi a primeira programadoranda historia.upper(Ada Lovelace foi a primeira programadoranda historia.))
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadoranda historia.upper(Ada Lovelace foi a primeira programadoranda historia.))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:51:13) 
-- CODE:
frase = 
print(Ada Lovelace foi a primeira programadoranda historia.upper(Ada Lovelace foi a primeira programadoranda historia.))
-- ERROR:
File "XXXX", line 1
    frase = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:05:29) 
-- CODE:
frase = Ada Lovelace foi a primeira programadora da historia.
print(frase.upper)
-- ERROR:
File "XXXX", line 1
    frase = Ada Lovelace foi a primeira programadora da historia.
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 15:43:26) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper)
-- EXECUTION TIME:
0.170852
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7ff013f5a4a8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 15:49:07) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 15:49:17) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.198019
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
